--- a/.env
+++ b/.env
@@ -1,7 +1,16 @@
 PORT=4000
 
+TYPE_DB=postgres
+HOST_DB=localhost
+PORT_DB=5342
+USERNAME_DB=root
+PASSWORD_DB=root
+DB_NAME=ROOT
+
+
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
+
