--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,50 @@
 version: '3.8'
 
 services:
-    prod:
-        container_name: nestjs_api_prod
-        image: nestjs-image
-        env_file:
-            - .env
-        build:
-            context: .
-            target: development
-            dockerfile: ./Dockerfile
-        command: npm run start:dev
-        ports:
-            - ${PORT}:${PORT}
-            - 9229:9229
-        networks:
-            - nesjs-network
-        volumes:
-            - .:/usr/src/app
-            - /usr/src/app/node_modules
-        restart: unless-stopped
-    postgres:
-        container_name: postgres-container
-        image: postgres-image
-        env_file:
-            - .env
-        build:
-            context: .
-            dockerfile: ./DockerfilePg
-        ports:
-            - ${PORT_DB}:${PORT_DB}
-        networks:
-            - nesjs-network
-        volumes:
-            - ./pgdata:/var/lib/postgresql/data
-        environment:
-            POSTGRES_PASSWORD: ${PASSWORD_DB}
-            POSTGRES_USER: ${USERNAME_DB}
-            POSTGRES_DB: ${DB_NAME}
-            PG_DATA: /var/lib/postgresql/data
+  prod:
+    image: nestjs
+    env_file:
+      - .env
+    container_name: nodejs2022Q2-service
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+      target: development
+    command: npm run start:dev
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    ports:
+      - ${PORT}:${PORT}
+      - 9229:9229
+    networks:
+      - nesjs-network
+    restart: unless-stopped
+    environment:
+      TYPEORM_HOST: postgres
+
+  postgres:
+    image: postgres
+    env_file:
+      - .env
+    container_name: mypostgres
+    build:
+      context: .
+      dockerfile: ./DockerfilePg
+    networks:
+      - nesjs-network
+    environment:
+      POSTGRES_PASSWORD: ${TYPEORM_PASSWORD}
+      POSTGRES_USER: ${TYPEORM_USERNAME}
+      POSTGRES_DB: ${TYPEORM_DATABASE}
+      POSTGRES_HOST_AUTH_METHOD: trust
+      PG_DATA: /var/lib/postgresql/data
+    ports:
+      - ${TYPEORM_PORT}:${TYPEORM_PORT}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
 networks:
-    nesjs-network:
+  nesjs-network:
+volumes:
+  pgdata:
